Revert "Merge crdroid/16.0 into the contract base"
This reverts the merge, restoring the contract tree to 76431b7d13d7.

The merge was ROM maintenance the port has not signed up for. infiniti-camera-port
exists for camera-port success and stability, not upstream currency: being behind
a root-upstream is acceptable provided the base is known, and bases are bumped
only when a related upstream change is actually needed - and then ALL of them
together, not one repo at a time.

The concrete cost was that it broke the thing the port actually produces. The
replayed profile in patches/patch/series.json pins each project by head_sha AND
head_tree_sha, and the consumer lane judges replayed projects on the TREE because
replay re-authors every commit so the sha can never match. Seven of the eight
series projects matched their pins exactly; this merge made frameworks_base the
only drifting entry, with the tree moving 76431b7d13d7 -> f0bda2d73d14.

Reverting rather than force-pushing: 16.0 is a published contract branch, so it
advances only by fast-forward. A revert commit is a fast-forward and restores
tree equality, which is the key the profile compares.

What was given up: 17 upstream commits, including a CachedAppOptimizer fix for
system_server crashes on kernels without memcg reclaim. That work is not lost -
it is one bump away whenever a coordinated base bump is actually warranted, and
staging/base-merge-20260805 is retained as the ready-made import.

Icp-Layer: base-merge
Icp-Class: upstreamable-general-oneplus
Icp-Base-Imported: revert of crdroid/16.0 import; contract returns to 043337aea674 tree