@@ -1694,17 +1694,7 @@ public class CachedAppOptimizer {
 
             if (valid == null) {
                 // Use JNI only once
-                try {
-                    valid = Boolean.valueOf(
-                            compactionFlagsValidForMemcg(getCompactionFlags(profile)));
-                } catch (RuntimeException e) {
-                    // On older kernels the memcg reclaim interface may not support
-                    // these flags; the native side throws IllegalArgumentException
-                    // instead of returning false. Treat that as "not valid for
-                    // memcg" and fall back to per-process compaction rather than
-                    // crashing system_server.
-                    valid = Boolean.FALSE;
-                }
+                valid = new Boolean(compactionFlagsValidForMemcg(getCompactionFlags(profile)));
                 mProfileValidForMemcgMap.put(profile, valid);
             }
 
@@ -1878,9 +1868,6 @@ public class CachedAppOptimizer {
                     break;
                 }
                 case COMPACT_SYSTEM_MSG: {
-                    if (!profileValidForMemcg(CompactProfile.FULL)) {
-                        break;
-                    }
                     Trace.traceBegin(Trace.TRACE_TAG_ACTIVITY_MANAGER, "compactSystem");
                     long memFreedBefore = getMemoryFreedCompaction();
                     compactSystem();
